# stm32-vscode-config

./: .clang-format  .clangd  readme.md  stm32f429.cfg  xmake.lua
snipprts/: c.json  jsonc.json  yaml.json
stm32f1/: CMakeLists.txt  gcc-arm-none-eabi-stm32f1.cmake
stm32f4/: gcc-arm-none-eabi.cmake
